# saucode

./: .gitignore  README.md  code_coverage.py  code_coverage_results.csv  eval.py  improve_endpoint_flowchart.md  saucode_system_documentation.md  test_items.json  test_results.csv
evals/: .coverage  README.md  code_improve_and_test_workflow.ipynb  code_improve_and_test_workflow_fixed.ipynb  deltas_summary_2025-10-20_21-47-23.csv  deltas_summary_2025-10-20_22-04-14.csv  deltas_summary_2025-10-20_22-06-40.csv  deltas_summary_2025-10-20_22-11-17.csv  evals.ipynb  evals_retrieval_ndcg_p5.ipynb  improvement_and_tests_results_2025-10-20_17-59-28.csv  improvement_and_tests_results_2025-10-20_18-37-38.csv  improvement_and_tests_results_2025-10-20_18-47-58.csv  improvement_and_tests_results_2025-10-20_19-02-41.csv  improvement_and_tests_results_2025-10-20_21-47-22.csv  improvement_and_tests_results_gpt-4o-mini_2025-10-20_22-03-34.csv  improvement_and_tests_results_o3-mini_2025-10-20_22-06-39.csv  improvement_and_tests_results_o3-mini_2025-10-20_22-11-16.csv  saucode_retrieval_eval.ipynb
evals/backups/: factorial__20251020-155415-105808.py  (+5 more)
infra/: README.md  docker-compose.yml  load-chunks.ipynb  vdb-query.ipynb
sauco-api/: api.py  main.py  pyproject.toml  sauco-api-mock.py  test_api.py  test_max_nesting.py  test_max_nesting_api.py
sauco-api/src/domain/: models.py
sauco-api/src/service/: improvement_service.py  metrics_service.py
sauco-de/: ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
(+35 files in other folders)
